--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta property="og:image" content="/logo.svg" />
+    <meta name="description" content="Query the demo database using natural language and visualise the results." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    <title>NL2SQL Analytics</title>
+    <title>Visualise DB - NL2SQL Analytics</title>
   </head>
   <body>
     <div id="root"></div>
